# hardline-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
comms_mcp/: __init__.py  adapters.py  mailbox.py  server.py
hardline_mcp/: __init__.py  adapters.py  mailbox.py  server.py
tests/: test_adapters.py  test_headless_mcp.py  test_live_agents.py  test_mailbox.py  test_server.py
